Pull request: AG-7322 Correct the location of the "reload-ico" icon in the "About" tab
Merge in EXTENSIONS/safari-app-extension from fix/AG-7322 to master

Squashed commit of the following:

commit 8f940aad1b9f3cbf26ed5c8d54c65662446036e4 [formerly 20b31f91472b09eff21aef15c5bff24616cefe01]
Merge: 837c635a abf587a8
Author: tvinzz <o.labudko@adguard.com>
Date:   Mon May 17 23:30:53 2021 +0200

    Merge branch 'master' into fix/AG-7322

commit 59ad1f2b32105cabb19f95f926901bc06b332ca7 [formerly 837c635abc64a24c5c3e3166f6ed4c130ac54506]
Author: tvinzz <o.labudko@adguard.com>
Date:   Thu May 13 01:35:59 2021 +0200

    fixed updates icon position


Former-commit-id: a05b4a651b74bc8d58863c103f23889e86dfa088

--- a/ElectronMainApp/src/main/ui/css/style.css
+++ b/ElectronMainApp/src/main/ui/css/style.css
@@ -1586,8 +1586,8 @@ li.active .toggler:before {
 .about-updates:after {
   content: '';
   position: absolute;
-  margin-left: 2px;
-  top: -1px;
+  margin-left: 5px;
+  top: 1px;
   width: 18px;
   height: 15px;
   background-image: url(../images/reload-ico-green.svg);
